--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -627,8 +627,8 @@ a.btn-style-b:hover {
   white-space: nowrap;
   overflow: hidden;
   cursor: pointer;
-  -webkit-tap-highlight-color: #f7ca3e;
-  background-color: #f7ca3e;
+  -webkit-tap-highlight-color: #e27802;
+  background-color: #e27802;
   border-radius: 5px;
   margin: 10px auto;
 }
@@ -4650,17 +4650,17 @@ html[dir="rtl"] .faq-question-submit {
   #dfoodyMenu {
     width: 100%;
     position: fixed;
-    top: 75px;
+    top: 70px;
     z-index: 999;
-    background-color: #f7ca3e;
+    background-color: #e27802;
     -webkit-box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
     -moz-box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
     box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
-    padding: 15px;
+    padding: 5px;
   }
 
   ul.dfoody-menu li ul {
-    background-color: #f7ca3e;
+    background-color: #e27802;
   }
 
   .dfdV2 .dfoody-header-box {
