--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -622,7 +622,7 @@ a.btn-style-b:hover {
   position: relative;
   display: inline-block;
   width: 40px;
-  height: 40px;
+  height: 50px;
   text-indent: 28px;
   white-space: nowrap;
   overflow: hidden;
@@ -1781,7 +1781,7 @@ ul.dft-menulist li:last-child .dft-single-list {
 /*----------------------------------------*/
 .most-popular-food-area {
   position: relative;
-  padding-top: 60px;
+  padding-top: 0px;
   padding-bottom: 80px;
 }
 .most-popular-food-area .section-titleV1 {
@@ -4650,7 +4650,7 @@ html[dir="rtl"] .faq-question-submit {
   #dfoodyMenu {
     width: 100%;
     position: fixed;
-    top: 70px;
+    top: 90px;
     z-index: 999;
     background-color: #e27802;
     -webkit-box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
@@ -4702,7 +4702,7 @@ html[dir="rtl"] .faq-question-submit {
   }
 
   .hero-area .hero-content .hero-text {
-    margin: 40px auto;
+    margin: 0 auto;
   }
 
   .dfoody-header-box .gm-box {
@@ -4748,7 +4748,7 @@ html[dir="rtl"] .faq-question-submit {
   }
 
   .hero-area {
-    padding: 75px 0px;
+    padding: 90px 0px;
   }
 
   a.btn-style-b,
