--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,112 +36,6 @@
   clear: both;
 }
 
-::-moz-selection {
-  background: #00b0ff;
-  color: #fff;
-  text-shadow: none;
-}
-
-::selection {
-  background: #00b0ff;
-  color: #fff;
-  text-shadow: none;
-}
-
-.no-mar {
-  margin: 0 !important;
-}
-
-.no-pad {
-  padding: 0 !important;
-}
-
-div#preloader {
-  background: #fff url("../img/loader.gif") no-repeat scroll center center;
-  height: 100%;
-  left: 0;
-  overflow: visible;
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 999;
-}
-
-header.navbar-fixed-top {
-  animation-duration: 0.8s;
-  animation-name: fadeInDown;
-  animation-timing-function: ease-in-out;
-  -webkit-box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
-  -moz-box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
-  box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
-  left: 0;
-  position: fixed !important;
-  right: 0;
-  top: 0;
-  width: 100%;
-  z-index: 999;
-}
-
-.mar-bot-50 {
-  margin-bottom: 50px;
-}
-
-.mar-bot-40 {
-  margin-bottom: 40px;
-}
-
-.mar-bot-35 {
-  margin-bottom: 35px;
-}
-
-.mar-bot-30 {
-  margin-bottom: 30px;
-}
-
-.mar-top-30 {
-  margin-top: 30px;
-}
-
-.mar-top-80 {
-  margin-top: 80px;
-}
-
-.mar-top-80 {
-  margin-top: 80px;
-}
-
-.mar-top-55 {
-  margin-top: 55px;
-}
-
-.mar-top-108 {
-  margin-top: 108px;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-right {
-  text-align: right;
-}
-
-*,
-*:before,
-*:after {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-*:focus {
-  outline: 0;
-}
-
 html {
   font-size: 62.5%;
   -webkit-font-smoothing: antialiased;
@@ -583,6 +477,129 @@ a.btn-style-b:hover {
 }
 #dfoodyMenu ul {
   width: 12em;
+}
+
+/*** MENU ***/
+/* Overlay */
+nav input:checked ~ #overlay {
+  background: #131313;
+  bottom: 0;
+  left: 0;
+  height: 100vh;
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 100vw;
+  color: white;
+  z-index: -1;
+}
+
+/* List */
+nav ul {
+  list-style: none;
+  max-height: 0;
+  opacity: 0;
+  overflow: hidden;
+  padding: 0;
+  text-align: center;
+  position: absolute;
+  left: 0;
+}
+
+nav input:checked ~ ul {
+  max-height: inherit;
+  opacity: 1;
+}
+
+nav ul > li {
+  margin: 1em 0;
+  text-align: center;
+}
+
+nav ul a {
+  color: #fff !important;
+  font-family: Inter;
+  font-size: 20px;
+  text-decoration: underline;
+}
+
+nav ul a:hover {
+  text-decoration: underline;
+}
+
+header.navbar-fixed-top {
+  animation-duration: 0.8s;
+  animation-name: fadeInDown;
+  animation-timing-function: ease-in-out;
+  -webkit-box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
+  -moz-box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
+  box-shadow: 0px 13px 35px -12px rgba(35, 35, 35, 0.15);
+  left: 0;
+  position: fixed !important;
+  right: 0;
+  top: 0;
+  width: 100%;
+  z-index: 999;
+}
+
+.mar-bot-50 {
+  margin-bottom: 50px;
+}
+
+.mar-bot-40 {
+  margin-bottom: 40px;
+}
+
+.mar-bot-35 {
+  margin-bottom: 35px;
+}
+
+.mar-bot-30 {
+  margin-bottom: 30px;
+}
+
+.mar-top-30 {
+  margin-top: 30px;
+}
+
+.mar-top-80 {
+  margin-top: 80px;
+}
+
+.mar-top-80 {
+  margin-top: 80px;
+}
+
+.mar-top-55 {
+  margin-top: 55px;
+}
+
+.mar-top-108 {
+  margin-top: 108px;
+}
+
+.text-left {
+  text-align: left;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.text-right {
+  text-align: right;
+}
+
+*,
+*:before,
+*:after {
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+*:focus {
+  outline: 0;
 }
 
 /* hamburger icon */
@@ -1781,7 +1798,7 @@ ul.dft-menulist li:last-child .dft-single-list {
 /*----------------------------------------*/
 .most-popular-food-area {
   position: relative;
-  padding-top: 0px;
+  padding-top: 80px;
   padding-bottom: 80px;
 }
 .most-popular-food-area .section-titleV1 {
@@ -4734,9 +4751,8 @@ html[dir="rtl"] .faq-question-submit {
   }
 
   .dfoody-header-box .logo-wrapper img {
-    margin: 12px auto;
-    width: 120px;
-    max-width: 120px;
+    width: 150px;
+    max-width: 150px;
   }
 
   .dfoody-header-box .logo-wrapper a {
