--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1799,8 +1799,15 @@ ul.dft-menulist li:last-child .dft-single-list {
 /*----------------------------------------*/
 .most-popular-food-area {
   padding-bottom: 80px;
-  padding-top: 200px;
+  padding-top: 20px;
 }
+
+@media (min-width: 320px) and (max-width: 480px) {
+  .most-popular-food-area {
+    padding-top: 200px;
+  }
+}
+
 .most-popular-food-area .section-titleV1 {
   margin-bottom: 60px;
 }
